2007-03-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000969: NarrativeWeb plugin: include the 
	  date in the media object pages

2007-03-11  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py: don't catch all exceptions - we won't
	  get a traceback.

2007-03-11  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000950: include the date in the reference 
	  sections of the narrative web site

2007-03-07  Stefan Björk  <skalman@acc.umu.se>
	* src/Filters/Rules/_HasMarkerBase.py (HasMarkerBase): fix typo
	* src/GrampsWidgets.py: better wording

2007-03-06  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py:
	* src/ReportBase/_ReportUtils.py:
	Fix 0000956: Event order within GRAMPS not replicated in web report

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0000954: e-mail address causes Narrative
	  Web plugin to generate bad links

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Fix 0000942: Relationship graph doesn't show 
	  preferred name format

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/TimeLine.py: Fix 0000943: Timeline doesn't show preferred 
	  name format

2007-02-26  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/WritePkg.py: Fix crash on gpkg export in Windows

2007-02-25  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py: Fix index error

2007-02-24  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/SvgDrawDoc.py.py: Fix XML error in draw_text.

2007-02-23  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py (edit_child_button_clicked): Catch
	open window situation.

2007-02-22  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/PdfDoc.py (write_text): Close <br/> tag.
	* src/GrampsDb/_GrampsBSDDB.py (reindex_reference_map): Typo.
